Details
-
Bug
-
Resolution: Fixed
-
Major
-
71,540
Description
in explorer file-browser details view, the cursor-selection-bar must look like
r71397-GOOD.webm
(same as Windows XP)
but since some recent commit, it looks like
r71588-BAD.webm![]()
Wine-sync comctl32 in r71540 is guilty, ThFabba found guilty wine-patch
CC AmineKhaldi
Attachments
Issue Links
- relates to
-
CORE-11368 Syncing ReactOS with Wine Staging 1.9.11
-
- Resolved
-