[COMCTL32] Apply Wine Staging commit 35bf531 by Michael Müller: Preserve custom colors between subitems. (v2). CORE-11383

svn path=/trunk/; revision=71791